removed polymorphic misadventure for post actions, segmented "add" methods
