# go/model_lord_tenant_create_body.go
@@ -7,10 +7,17 @@
  * Contact: william.ohara@subscripify.com
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
-package swagger
+package tenantapi
 
-type TenantsBody struct {
-    LordTenantIntake
-    SuperTenantIntake
-    MainTenantIntake
+type LordTenantCreateBody struct {
+	// The services config UUID to use for the lord tenant. Must be a valid services config UUID
+	InternalServicesConfig string `json:"internalServicesConfig"`
+	// The services config UUID to use for the super-tenant. Must be a valid services config UUID
+	SuperServicesConfig string `json:"superServicesConfig"`
+	// The subdomain name string which used for the services namespace of the tenant and  providing unique url for each tenant
+	Subdomain string `json:"subdomain"`
+	// The services config UUID to use for the main-tenant's public services. The services config UUID  used must be a publicServices UUID and belong to the liege tenant
+	PublicServicesConfig string `json:"publicServicesConfig"`
+	// The cloud provider to deploy to. e.g. The only cloud provider supported (currently) is azure.
+	SubscripifyDeploymentCloudLocation string `json:"subscripifyDeploymentCloudLocation"`
 }
