# go/model_main_tenant_create_body.go
@@ -7,9 +7,9 @@
  * Contact: william.ohara@subscripify.com
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
-package swagger
+package tenantapi
 
-type SuperTenantIntake struct {
+type MainTenantCreateBody struct {
 	// Indicate which type of tenant one is spinning up. Main Tenants require only a public services config.  Super tenants require a super services config and a public config. Lord Tenants require super, public and internal services  configs.
 	TenantType string `json:"tenantType"`
 	// The subdomain name string which used for the services namespace of the tenant and  providing unique url for each tenant
@@ -18,6 +18,4 @@ type SuperTenantIntake struct {
 	PublicServicesConfig string `json:"publicServicesConfig"`
 	// The cloud provider to deploy to. e.g. The only cloud provider supported (currently) is azure.
 	SubscripifyDeploymentCloudLocation string `json:"subscripifyDeploymentCloudLocation"`
-	// The services config UUID to use for the super-tenant. Must be a valid services config UUID
-	SuperServicesConfig string `json:"superServicesConfig"`
 }
