# go/model_super_tenant_create_body.go
@@ -7,9 +7,11 @@
  * Contact: william.ohara@subscripify.com
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
-package swagger
+package tenantapi
 
-type MainTenantIntake struct {
+type SuperTenantCreateBody struct {
+	// The services config UUID to use for the super-tenant. Must be a valid services config UUID
+	SuperServicesConfig string `json:"superServicesConfig"`
 	// Indicate which type of tenant one is spinning up. Main Tenants require only a public services config.  Super tenants require a super services config and a public config. Lord Tenants require super, public and internal services  configs.
 	TenantType string `json:"tenantType"`
 	// The subdomain name string which used for the services namespace of the tenant and  providing unique url for each tenant
