# go/routers.go
@@ -7,7 +7,7 @@
  * Contact: william.ohara@subscripify.com
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
-package swagger
+package tenantapi
 
 import (
 	"fmt"
@@ -56,9 +56,44 @@ var routes = Routes{
 	},
 
 	Route{
-		"AddTenant",
+		"AddLordTenant",
 		strings.ToUpper("Post"),
-		"/tenants",
-		AddTenant,
+		"/tenants/lord",
+		AddLordTenant,
+	},
+
+	Route{
+		"AddMainTenant",
+		strings.ToUpper("Post"),
+		"/tenants/main",
+		AddMainTenant,
+	},
+
+	Route{
+		"AddSuperTenant",
+		strings.ToUpper("Post"),
+		"/tenants/super",
+		AddSuperTenant,
+	},
+
+	Route{
+		"DeleteTenant",
+		strings.ToUpper("Delete"),
+		"/tenants/{tenantGuid}",
+		DeleteTenant,
+	},
+
+	Route{
+		"GetTenant",
+		strings.ToUpper("Get"),
+		"/tenants/{tenantGuid}",
+		GetTenant,
+	},
+
+	Route{
+		"UpdateTenant",
+		strings.ToUpper("Patch"),
+		"/tenants/{tenantGuid}",
+		UpdateTenant,
 	},
 }
